<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.mstokluska.chattie.activities.LogInActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/chattieLogo"
                android:layout_width="wrap_content"
                android:layout_height="156dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="80dp"
                android:background="@color/background"
                app:srcCompat="@drawable/logo" />


            <android.support.design.widget.TextInputEditText
                android:id="@+id/userNickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="100dp"
                android:backgroundTint="@color/colorMain"
                android:gravity="center"
                android:hint="@string/nickname"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorMain"
                android:textSize="14sp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="100dp"
                android:backgroundTint="@color/colorMain"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorMain"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="110dp"
                android:background="@drawable/rounded_button"
                android:paddingTop="8dp"
                android:paddingBottom="2dp"
                android:gravity="center"
                android:stateListAnimator="@null"
                android:text="@string/sign_in"
                android:textColor="@color/whiteFont"
                android:textSize="13sp" />


            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="110dp"
                android:background="@drawable/rounded_button"
                android:paddingTop="2dp"
                android:paddingBottom="8dp"
                android:gravity="center"
                android:stateListAnimator="@null"
                android:text="@string/sign_up"
                android:textColor="@color/whiteFont"
                android:textSize="13sp" />
        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>