<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.mstokluska.chattie.activities.LogInActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorMain"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/AppTheme">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarCreateUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/whiteFont"/>
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/user_create_Nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="100dp"
                android:layout_marginRight="100dp"
                android:backgroundTint="@color/colorMain"
                android:gravity="center"
                android:hint="@string/nickname"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorMain"
                android:textSize="14sp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/user_create_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="100dp"
                android:backgroundTint="@color/colorMain"
                android:gravity="center"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorMain"
                android:textSize="14sp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/user_create_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="100dp"
                android:backgroundTint="@color/colorMain"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorMain"
                android:textSize="14sp" />


            <Button
                android:id="@+id/btnCreateUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="110dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:paddingTop="2dp"
                android:paddingBottom="8dp"
                android:stateListAnimator="@null"
                android:text="@string/create_user"
                android:textColor="@color/whiteFont"
                android:textSize="13sp" />
        </LinearLayout>



</RelativeLayout>

</android.support.constraint.ConstraintLayout>